--- a/source/themes/tekkie/tekkie/_layouts/default.html
+++ b/source/themes/tekkie/tekkie/_layouts/default.html
@@ -18,7 +18,9 @@
 
   <link href="{{ site.url }}/components/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
   <link href="{{ site.url }}/components/bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet" type="text/css" />
-  <link href="{{ site.url }}/assets/css/style.css" rel="stylesheet" type="text/css" />
+  {% for stylesheet in theme_paths("assets/css/style.css") %}
+  <link href="{{ site.url }}/{{ stylesheet }}" rel="stylesheet" media="screen" />
+  {% endfor %}
   <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
   <!--[if lt IE 9]>
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
@@ -39,33 +41,29 @@
 
 </head>
 <body>
-        <header>
-            <div class="navbar navbar-inverse navbar-fixed-top navbar-tkc">
-                <div class="navbar-inner">
-                    <div class="container-fluid">
-                        <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                        </a>
-                        <a class="brand" href="{{ site.url }}/">
-                          <img src="{{ site.url }}/assets/images/logo-tekkie-consulting-small.png" />
-                          {{ site.title }}
-                        </a>
-                        <div class="nav-collapse collapse">
-                            <ul class="nav">
-                                <li><a href="{{ site.url }}/blog">Blog</a></li>
-                                <li><a href="{{ site.url }}/blog/categories">Categories</a></li>
-                                <li><a href="{{ site.url }}/about">About</a></li>
-                            </ul>
-                        </div><!--/.nav-collapse -->
-                    </div>
-                </div>
-            </div>
-        </header>
+{% include "navigation" %}
         <div class="mainContent container">
             <div class="row-fluid">
+                <div class="span8">
                     {% block content_wrapper %}{% block content %}{% endblock %}{% endblock %}
+                </div>
+                <div class="span4 sidebar">
+<!--
+                    <div class="well">
+                      <h4>{{ site.title }}{% if site.subtitle %} <small>{{ site.subtitle }}</small>{% endif %}</h4>
+                    </div>
+-->
+                    {% if data.posts_categories %}
+                    <div class="well sidebar-nav">
+                      <h4>Categories</h4>
+                      <ul>
+                      {% for category,posts in data.posts_categories %}
+                      <li><a href="{{ site.url }}/blog/categories/{{ category|url_encode(true) }}">{{ category }}</a></li>
+                      {% endfor %}
+                      </ul>
+                    </div>
+                    {% endif %}
+                </div>
             </div>
         </div>
         <footer class="container">
