condense tags; shorten post title

--- a/source/themes/tekkie/tekkie/_includes/navigation.html
+++ b/source/themes/tekkie/tekkie/_includes/navigation.html
@@ -10,7 +10,7 @@
                   </a>
                   <a class="navbar-brand" href="{{ site.url }}/">
                     <img src="{{ site.url }}/{{ theme_path("assets/images/logomark-tekkie-white.svg") }}" />
-                    {{ site.title }}
+                    <span>{{ site.title }}</span>
                   </a>
                 </div><!-- .navbar-header -->
                 <div class="navbar-collapse collapse">
