--- a/source/themes/tekkie/tekkie/_includes/navigation.html
+++ b/source/themes/tekkie/tekkie/_includes/navigation.html
@@ -15,8 +15,8 @@
                 </div><!-- .navbar-header -->
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href="{{ site.url }}/blog">Blog</a></li>
-                        <li><a href="{{ site.url }}/categories">Categories</a></li>
+                        <li{% if page.layout == 'post' or page.menu_active == 'blog' %} class="active"{% endif %}><a href="{{ site.url }}/blog">Blog</a></li>
+                        <li{% if page.menu_active == 'services' %} class="active"{% endif %}><a href="{{ site.url }}/services">Services</a></li>
                         <li><a href="{{ site.url }}/about">About</a></li>
                     </ul>
                 </div><!--/.nav-collapse -->
