--- a/source/themes/tekkie/tekkie/_layouts/default.html
+++ b/source/themes/tekkie/tekkie/_layouts/default.html
@@ -66,32 +66,4 @@
                 </div>
             </div>
         </div>
-        <footer class="container">
-            &copy; {{ "now"|date("Y") }} {{ site.title }}
-        </footer>
-
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="{{ site.url }}/components/jquery/jquery.min.js"><\/script>')</script>
-        <script src="{{ site.url }}/components/bootstrap/js/bootstrap.min.js"></script>
-        {% block scripts %}
-        {% endblock %}
-
-        {% if site.google_analytics_tracking_id %}
-
-        <script type="text/javascript">
-            (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-            })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-            ga('create', '{{site.google_analytics_tracking_id}}', 'auto');
-            ga('send', 'pageview');
-        </script>
-        {% endif %}
-        <script src="{{ site.url }}/components/highlightjs/highlight.pack.js"></script>
-        <script>hljs.initHighlightingOnLoad();</script>
-
-        {% block scripts_after %}
-        {% endblock %}
-</body>
-</html>
+{% include "footer" %}
