only apply header rule on blogpost page

--- a/source/themes/tekkie/tekkie/assets/css/style.css
+++ b/source/themes/tekkie/tekkie/assets/css/style.css
@@ -364,7 +364,7 @@ ul.next-previous-navigation > li.previous-post:before {
 }
 
 /** blogpost page */
-header {
+article header {
     clear: both;
     margin-top: 1em;
 }
