--- a/source/themes/tekkie/tekkie/assets/css/style.css
+++ b/source/themes/tekkie/tekkie/assets/css/style.css
@@ -1,382 +1,466 @@
-
 body {
   font-family: Arial,lucida-sans,Helvetica,Tahoma;
-  background: url('../images/background.jpg');
-}
-
+  background: url("../images/background.jpg"); }
 
 h4 small {
-    display: block;
-    font-size: 60%;
-    color: #888;
-}
+  display: block;
+  font-size: 60%;
+  color: #888; }
 
-.mainContent, footer.container {
+footer .container {
+  padding: 10px 0; }
 
-}
+.sidebar {
+  margin-top: 60px; }
 
-footer.container {
-/*    margin-top: 30px;*/
-    padding: 10px 0;
-/*    border-top: 1px dashed #aaa;*/
-}
-
-.sidebar{margin-top:60px;}
-.sidebar-list{list-style-type: none; margin:0; padding:0; color:}
-.sidebar-li>a{color:#3D5899;}
-
+.sidebar-list {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  /*color:*/ }
+  .sidebar-list a {
+    color: #3D5899; }
 
 @media (max-width: 767px) {
-    .sidebar {
-        padding-top: 30px;
-    }
-}
+  .sidebar {
+    padding-top: 30px; } }
 @media (min-width: 980px) {
-    body {
-        padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
-
-    }
-}
-
+  body {
+    padding-top: 60px;
+    /* 60px to make the container go all the way to the bottom of the topbar */ } }
 /** imbrincated containers should not have fixed width */
 .container .container {
-    width: auto;
-}
+  width: auto; }
 
-.navbar-inverse {margin:0px;}
+.navbar-inverse {
+  margin: 0px; }
 
 .navbar-inverse.navbar-tkc .navbar-inner {
   background: #30384B;
-  margin:0;
-}
+  margin: 0; }
 
-/*@media (min-width: 768px) {
-  .navbar-nav>li>a {
-    margin: 0 .5em;
-    padding: .5em;
-  }
-}*/
+.navbar-inverse.navbar-tkc .navbar-nav > li > a {
+  border-top: 5px solid #30384B; }
 
-.navbar-inverse.navbar-tkc .navbar-nav>li>a {
-  border-top: 5px solid #30384B;
-}
-
-.navbar-inverse.navbar-tkc .navbar-nav>.active>a {
+.navbar-inverse.navbar-tkc .navbar-nav > .active > a {
   background-color: inherit;
   border-top: 5px solid #30384B;
-  color: #fff;
-}
+  color: #fff; }
 
-.navbar-inverse .navbar-nav>li>a:focus, .navbar-inverse .navbar-nav>li>a:hover {
+.navbar-inverse .navbar-nav > li > a:focus, .navbar-inverse .navbar-nav > li > a:hover {
   color: #fff;
-  border-top: 5px solid #ccc;
-}
+  border-top: 5px solid #ccc; }
 
 .navbar .brand {
   margin: 1px;
-  padding: 0px;
-}
-.navbar-brand{transition:all .5s ease-in-out;}
+  padding: 0px; }
 
-.navbar-brand>img {
+.navbar-brand {
+  transition: all .5s ease-in-out; }
+
+.navbar-brand > img {
   height: 32px;
   display: inline;
-  transition:all .5s ease-in-out;
-}
-.navbar-brand, .navbar-brand>img:hover{
-  transform:rotatez(360deg);
-}
+  transition: all .5s ease-in-out; }
+
+.navbar-brand, .navbar-brand > img:hover {
+  transform: rotatez(360deg); }
 
 @media (max-width: 979px) {
   .navbar .btn-navbar {
     display: inline-block;
     background-color: #00D2FF;
-    min-height: 5em;
-  }
-}
-
+    min-height: 5em; } }
 .navbar .navbar-brand {
-  height: inherit;
-}
+  height: inherit; }
 
 /* screen size needs more love */
 @media (min-width: 979px) {
-
-
-
   .navbar .nav {
     float: right;
-    margin: 0 1em .5em 1em;
-  }
-}
-
+    margin: 0 1em .5em 1em; } }
 article h2, h3 {
-/*  font-family: 'Amaranth';*/
+  /*  font-family: 'Amaranth';*/
   font-family: "futura-pt",sans-serif;
   font-weight: 700;
-  font-size: 28px;
-}
+  font-size: 28px; }
 
 article h2, h3, code,
 h2 a, h3 a, h2 a:hover, h3 a:hover, h2 a:focus, h3 a:focus {
-  color: #3D5899;
-}
+  color: #3D5899; }
 
 a, a:hover, a:focus {
-  color: #CC3514;
-}
+  color: #CC3514; }
 
 .separator-bottom {
-  background: url('../images/separator-for-bottom.png') repeat-x;
+  background: url("../images/separator-for-bottom.png") repeat-x;
   width: 100%;
-  height: 17px;
-}
+  height: 17px; }
 
 .panel {
   float: left;
-  margin: 1em;
-}
+  margin: 1em; }
 
 h3.panel-title {
-  color: #3D5899;
-}
+  color: #3D5899; }
 
 .blog-posts h2 {
   border-bottom: 1px solid #30384B;
   color: #30384B;
-  opacity: 0.8;
-}
+  opacity: 0.8; }
 
 .blog-posts h3 {
-  font-size: 22px;
-}
+  font-size: 22px; }
 
-.blog-posts .nav>li>a, .blog-posts .nav>li>a:visited {
+.blog-posts .nav > li > a, .blog-posts .nav > li > a:visited {
   background-color: #eee;
   opacity: 0.8;
-  padding: 2px;
-}
+  padding: 2px; }
 
-.blog-posts .nav>li>a:hover, .blog-posts .nav>li>a:focus {
-  background-color: #ddd;
-}
+.blog-posts .nav > li > a:hover, .blog-posts .nav > li > a:focus {
+  background-color: #ddd; }
 
 .blog-posts .span4 {
-  width: 29%;
-}
+  width: 29%; }
 
 .tk-services ul.pager {
   clear: both;
-  margin-bottom: 0;
-}
+  margin-bottom: 0; }
 
-.tk-services ul.pager li>a {
-  background-color: #30384B;
-}
-.tk-services ul.pager li>a:hover, .tk-services ul.pager li>a:focus {
-  background-color: #30384B;
-}
+.tk-services ul.pager li > a {
+  background-color: #30384B; }
+
+.tk-services ul.pager li > a:hover, .tk-services ul.pager li > a:focus {
+  background-color: #30384B; }
 
 .tel dt, .email dt {
-  display: inline;
-}
+  display: inline; }
 
 .tel dd, .email dd {
   margin-left: 5px;
-  display: inline-block;
-}
+  display: inline-block; }
 
-.tel>span.glyphicon {
-  margin-right: 1em;
-}
+.tel > span.glyphicon {
+  margin-right: 1em; }
 
 footer ul.social {
-  list-style: none;
-}
+  list-style: none; }
 
 footer ul.social li {
   display: inline-block;
-  padding: 0 1em;
-}
+  padding: 0 1em; }
 
 footer ul.social li a {
   display: block;
   width: 48px;
   height: 48px;
-  text-indent: -99999px;
-}
+  text-indent: -99999px; }
 
 footer ul.social li.facebook a {
-  background: url('../images/social/black-facebook.png') bottom no-repeat;
-}
+  background: url("../images/social/black-facebook.png") bottom no-repeat; }
 
 footer ul.social li.facebook a:hover {
-  background: url('../images/social/colour-facebook.png') bottom no-repeat;
-}
+  background: url("../images/social/colour-facebook.png") bottom no-repeat; }
 
 footer ul.social li.github a {
-  background: url('../images/social/black-github.png') bottom no-repeat;
-}
+  background: url("../images/social/black-github.png") bottom no-repeat; }
 
 footer ul.social li.github a:hover {
-  background: url('../images/social/colour-github.png') bottom no-repeat;
-}
+  background: url("../images/social/colour-github.png") bottom no-repeat; }
 
 footer ul.social li.twitter a {
-  background: url('../images/social/black-twitter.png') bottom no-repeat;
-}
+  background: url("../images/social/black-twitter.png") bottom no-repeat; }
 
 footer ul.social li.twitter a:hover {
-  background: url('../images/social/colour-twitter.png') bottom no-repeat;
-}
+  background: url("../images/social/colour-twitter.png") bottom no-repeat; }
+
 /* Global styles */
-.margin-bottom{margin-bottom:30px;}
-.margin-top{margin-bottom:30px;}
-.btn-default{background-color:white;}
-.btn-primary{background-color: #30384B; border:none;}
-.btn-primary:hover{background-color:#1c202b;}
-.clear-2:nth-of-type(2n){clear:left;}
+.margin-bottom {
+  margin-bottom: 30px; }
+
+.margin-top {
+  margin-bottom: 30px; }
+
+.btn-default {
+  background-color: white; }
+
+.btn-primary {
+  background-color: #30384B;
+  border: none; }
+
+.btn-primary:hover {
+  background-color: #1c202b; }
+
+.clear-2:nth-of-type(2n) {
+  clear: left; }
+
 #back-to-top {
-    position: fixed;
-    bottom: 40px;
-    right: 40px;
-    z-index: 9999;
-    width: 32px;
-    height: 32px;
-    text-align: center;
-    line-height: 30px;
-    background: #f5f5f5;
-    color: #444;
-    cursor: pointer;
-    border: 0;
-    border-radius: 2px;
-    text-decoration: none;
-    transition: opacity 0.2s ease-out;
-    opacity: 0;
-}
+  position: fixed;
+  bottom: 40px;
+  right: 40px;
+  z-index: 9999;
+  width: 32px;
+  height: 32px;
+  text-align: center;
+  line-height: 30px;
+  background: #f5f5f5;
+  color: #444;
+  cursor: pointer;
+  border: 0;
+  border-radius: 2px;
+  text-decoration: none;
+  transition: opacity 0.2s ease-out;
+  opacity: 0; }
+
 #back-to-top:hover {
-    background: #e9ebec;
-}
+  background: #e9ebec; }
+
 #back-to-top.show {
-    opacity: 1;
-}
+  opacity: 1; }
 
 /* Homepage intro section */
-.intro-img {background: linear-gradient(rgba(0,0,0,0.9),rgba(0,0,0,0.7)), url('../images/intro-img.jpg') no-repeat center; background-attachment: fixed; text-align: center; padding:75px 0; color:white; position:relative; z-index:1;}
-.intro-title{position:relative;}
-.intro-title:after{content:""; display: block;width:100px; height:2px; background-color:#30384B; margin:0 auto 0 auto; }
-.company-summary{max-width:800px; margin:0 auto 0 auto; color:white; font-size:}
-.service-title{display:inline-block; font-size:20px; margin:0; color:white; z-index:2; }
-.service-title:after{content:".";}
+.intro-img {
+  background: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.7)), url("../images/intro-img.jpg") no-repeat center;
+  background-attachment: fixed;
+  text-align: center;
+  padding: 75px 0;
+  color: white;
+  position: relative;
+  z-index: 1; }
 
-.intro-cta-button{background-color:#30384B; border:none; margin-top:30px; transition: all .1s ease-in-out; }
-.intro-cta-button:hover{background-color: #1c202b; }
+.intro-title {
+  position: relative; }
+
+.intro-title:after {
+  content: "";
+  display: block;
+  width: 100px;
+  height: 2px;
+  background-color: #30384B;
+  margin: 0 auto 0 auto; }
+
+.company-summary {
+  max-width: 800px;
+  margin: 0 auto 0 auto;
+  color: white; }
+
+.service-title {
+  display: inline-block;
+  font-size: 20px;
+  margin: 0;
+  color: white;
+  z-index: 2; }
+
+.service-title:after {
+  content: "."; }
+
+.intro-cta-button {
+  background-color: #30384B;
+  border: none;
+  margin-top: 30px;
+  transition: all .1s ease-in-out; }
+
+.intro-cta-button:hover {
+  background-color: #1c202b; }
 
 /* Homepage services section */
-.services-section{padding:50px 0;}
-.section-intro{max-width: 800px; text-align: center; margin:0 auto 50px auto;}
-.section-intro-title{color: #30384B;}
+.services-section {
+  padding: 50px 0; }
 
-.service-text:before{transition: all .2s ease-in-out;}
-.service-text:hover:before{transform: rotatez(45deg)}
+.section-intro {
+  max-width: 800px;
+  text-align: center;
+  margin: 0 auto 50px auto; }
 
-.Consulting{}
-.Consulting:before{content:'\f47b'; font-family:'Ionicons'; display:block; font-size: 40px; color:#30384B;}
+.section-intro-title {
+  color: #30384B; }
 
-.Prototyping{}
-.Prototyping:before{content:'\f453'; font-family:'Ionicons'; display:block; font-size: 40px; color:#30384B;}
+.service-text:before {
+  transition: all .2s ease-in-out; }
 
-.Business{}
-.Business:before{content:'\f483'; font-family:'Ionicons'; display:block; font-size: 40px; color:#30384B;}
+.service-text:hover:before {
+  transform: rotatez(45deg); }
 
-.Architecture{}
-.Architecture:before{content:'\f3ef'; font-family:'Ionicons'; display:block; font-size: 40px; color:#30384B;}
+.Consulting:before {
+  content: '\f47b';
+  font-family: 'Ionicons';
+  display: block;
+  font-size: 40px;
+  color: #30384B; }
 
-.Development{}
-.Development:before{content:'\f2bf'; font-family:'Ionicons'; display:block; font-size: 40px; color:#30384B;}
+.Prototyping:before {
+  content: '\f453';
+  font-family: 'Ionicons';
+  display: block;
+  font-size: 40px;
+  color: #30384B; }
 
-.Testing{}
-.Testing:before{content:'\f373'; font-family:'Ionicons'; display:block; font-size: 40px; color:#30384B;}
+.Business:before {
+  content: '\f483';
+  font-family: 'Ionicons';
+  display: block;
+  font-size: 40px;
+  color: #30384B; }
 
-.Release{}
-.Release:before{content:'\f39c'; font-family:'Ionicons'; display:block; font-size: 40px; color:#30384B;}
+.Architecture:before {
+  content: '\f3ef';
+  font-family: 'Ionicons';
+  display: block;
+  font-size: 40px;
+  color: #30384B; }
 
-.Maintenance{}
-.Maintenance:before{content:'\f2ba'; font-family:'Ionicons'; display:block; font-size: 40px; color:#30384B;}
+.Development:before {
+  content: '\f2bf';
+  font-family: 'Ionicons';
+  display: block;
+  font-size: 40px;
+  color: #30384B; }
+
+.Testing:before {
+  content: '\f373';
+  font-family: 'Ionicons';
+  display: block;
+  font-size: 40px;
+  color: #30384B; }
+
+.Release:before {
+  content: '\f39c';
+  font-family: 'Ionicons';
+  display: block;
+  font-size: 40px;
+  color: #30384B; }
+
+.Maintenance:before {
+  content: '\f2ba';
+  font-family: 'Ionicons';
+  display: block;
+  font-size: 40px;
+  color: #30384B; }
 
 /* Homepage blog section */
-.section-blog-posts{padding:40px 0 50px 0; background-color: #f2f2f2;}
-.clear:nth-of-type(3n-1){clear:left;}
-.article-title>a:hover{text-decoration: none;}
+.section-blog-posts {
+  padding: 40px 0 50px 0;
+  background-color: #f2f2f2; }
 
-.post-title:after{content: ""; width:50px; height:2px; display:block; background-color:#3D5899; transition: all .2s ease-in-out; margin-bottom:10px;}
-.post-title:hover:after{content: ""; width:100%;}
-.fp-content, .fp-excerpt{margin-top:15px;}
+.clear:nth-of-type(3n-1) {
+  clear: left; }
+
+.article-title > a:hover {
+  text-decoration: none; }
+
+.post-title:after {
+  content: "";
+  width: 50px;
+  height: 2px;
+  display: block;
+  background-color: #3D5899;
+  transition: all .2s ease-in-out;
+  margin-bottom: 10px; }
+
+.post-title:hover:after {
+  content: "";
+  width: 100%; }
+
+.fp-content, .fp-excerpt {
+  margin-top: 15px; }
 
 /* Services page */
-.service-description{text-align: justify; max-width: 350px; margin:0 auto;}
-.page-services-section{padding:50px 0 50px 0;}
+.service-description {
+  text-align: justify;
+  max-width: 350px;
+  margin: 0 auto; }
+
+.page-services-section {
+  padding: 50px 0 50px 0; }
+
 /* Footer */
-.footer {padding:25px 0 0 0 !important; background: #30384B; color:white; }
-.footer-widget-title{color:white;}
-.footer-icon{font-size:25px; margin-right:20px; color:white; transition: all .2s ease-in-out;}
-.footer-nav-link{display:block; margin-bottom:15px; color:white; transition: all .2s ease-in-out;}
-.footer-nav-link:hover{color:grey;}
+.footer {
+  padding: 25px 0 0 0 !important;
+  background: #30384B;
+  color: white; }
 
+.footer-widget-title {
+  color: white; }
+
+.footer-icon {
+  font-size: 25px;
+  margin-right: 20px;
+  color: white;
+  transition: all .2s ease-in-out; }
+
+.footer-nav-link {
+  display: block;
+  margin-bottom: 15px;
+  color: white;
+  transition: all .2s ease-in-out; }
+
+.footer-nav-link:hover {
+  color: grey; }
 
 /* Page about */
-.about-section{padding-top:50px;}
+.about-section {
+  padding-top: 50px; }
 
 /* Page about */
-.section-blog{padding:50px 0;}
+.section-blog {
+  padding: 50px 0; }
 
 /* Contact page */
-.section-contact{padding:50px 0;}
-.contact-icon{font-size:40px; color:#30384B; }
+.section-contact {
+  padding: 50px 0; }
+
+.contact-icon {
+  font-size: 40px;
+  color: #30384B; }
+
 /* Cookie prompt */
-.cc_btn{background-color:#30384B !important; color:white !important; }
-.cc_logo{display: none !important;}
+.cc_btn {
+  background-color: #30384B !important;
+  color: white !important; }
+
+.cc_logo {
+  display: none !important; }
+
 /* Map */
-#map { height: 400px; }
+#map {
+  height: 400px; }
 
 /* blogpost navigation links */
 ul.next-previous-navigation {
-    width: 100%;
-    margin-bottom: 2em;
-}
+  width: 100%;
+  margin-bottom: 2em; }
+
 ul.next-previous-navigation > li {
-    width: 100%;
-    float: left;
-    list-style-type: none;
-    padding: 1em;
-}
+  width: 100%;
+  float: left;
+  list-style-type: none;
+  padding: 1em; }
+
 ul.next-previous-navigation > li.next-post:after {
-    content: '\f427';
-    font-family:'Ionicons';
-    padding-left: 1em;
-    color:#30384B;
-}
+  content: '\f427';
+  font-family: 'Ionicons';
+  padding-left: 1em;
+  color: #30384B; }
+
 ul.next-previous-navigation > li.previous-post:before {
-    content: '\f4a1';
-    font-family:'Ionicons';
-    padding-right: 1em;
-    color:#30384B;
-}
+  content: '\f4a1';
+  font-family: 'Ionicons';
+  padding-right: 1em;
+  color: #30384B; }
 
 /** blogpost page */
 article header {
-    clear: both;
-    margin-top: 1em;
-}
+  clear: both;
+  margin-top: 1em; }
 
 /** blogpost meta information */
 a i.ion-ios-pricetags-outline,
 a i.ion-ios-folder-outline {
-    margin-right: .5em;
-}
+  margin-right: .5em; }
 
 /** category and tag page header */
 h1.page-header i.ion-ios-folder-outline,
 h1.page-header i.ion-ios-pricetags-outline {
-    margin-right: .5em;
-}
+  margin-right: .5em; }
+
+/*# sourceMappingURL=style.css.map */
