improved copyright notice

--- a/source/themes/tekkie/tekkie/_includes/footer.html
+++ b/source/themes/tekkie/tekkie/_includes/footer.html
@@ -3,7 +3,7 @@
 
     <div class="col-md-12 text-center margin-bottom">
       <p class="footer-about">Automation testing, large scale applications architecture and DevOps expertise</p>
-        <p> &copy; {{ "now"|date("Y") }} {{ site.title }} SRL.</p>
+        <p> &copy; 2011-{{ "now"|date("Y") }} {{ site.title }} SRL.</p>
 
 
    
