--- a/source/themes/tekkie/tekkie/_includes/footer.html
+++ b/source/themes/tekkie/tekkie/_includes/footer.html
@@ -3,123 +3,50 @@
 
     <div class="col-md-12 text-center margin-bottom">
       <p class="footer-about">Automation testing, large scale applications architecture and DevOps expertise</p>
-        <p> &copy; 2011-{{ "now"|date("Y") }} {{ site.title }} SRL.</p>
+      <p> &copy; 2011-{{ "now"|date("Y") }} {{ site.title }} SRL.</p>
 
-
-   
-                <a href="https://www.facebook.com/TekkieC" title="Tekkie Consulting on Facebook">
-                  <i class="footer-icon ion-social-facebook"></i>
-                </a>
-                <a href="https://github.com/tekkie" title="Tekkie Consulting on GitHub">
-                  <i class="footer-icon ion-social-github"></i>
-                </a>
-                <a href="https://twitter.com/TekkieC" title="Tekkie Consulting on Twitter">
-                  <i class="footer-icon ion-social-twitter"></i>
-                </a>
-
-   
-<!--
-      <div class="col-md-3 margin-bottom">
-        <h4 class="footer-widget-title">Quick Navigation</h4>
-        <a class="footer-nav-link" href="{{ site.url }}/blog">Blog</a>
-        <a class="footer-nav-link" href="{{ site.url }}/services">Services</a>
-        <a class="footer-nav-link" href="{{ site.url }}/about">About</a>
-        <a class="footer-nav-link" href="{{ site.url }}/contact">Contact</a> 
-      </div>
--->
-
-      </div>
-
+      <a href="https://www.facebook.com/TekkieC" title="Tekkie Consulting on Facebook">
+        <i class="footer-icon ion-social-facebook"></i>
+      </a>
+      <a href="https://github.com/tekkie" title="Tekkie Consulting on GitHub">
+        <i class="footer-icon ion-social-github"></i>
+      </a>
+      <a href="https://twitter.com/TekkieC" title="Tekkie Consulting on Twitter">
+        <i class="footer-icon ion-social-twitter"></i>
+      </a>
     </div>
+
+  </div><!-- .container -->
 </footer>
 <a href="#" id="back-to-top" title="Back to top">&uarr;</a>
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="{{ site.url }}/components/jquery/jquery.min.js"><\/script>')</script>
-        <script src="{{ site.url }}/components/bootstrap/js/bootstrap.min.js"></script>
-        {% block scripts %}
-        {% endblock %}
 
-        {% if site.google_analytics_tracking_id %}
+<script src="//ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+<script>window.jQuery || document.write('<script src="{{ site.url }}/components/jquery/jquery.min.js"><\/script>')</script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+{% block scripts %}
+{% endblock %}
 
-        <script type="text/javascript">
-            (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-            })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+{% if site.google_analytics_tracking_id %}
 
-            ga('create', '{{site.google_analytics_tracking_id}}', 'auto');
-            ga('send', 'pageview');
-        </script>
-        {% endif %}
-        <script>
-        //-------------------------- Footer bottom----------------------------
-       $(document).ready(function(){
-           function FooterBottom() {
-           var docHeight = $(window).height();
-           var footerHeight = $('#footer').height();
-           var footerTop = $('#footer').position().top + footerHeight;
+<script type="text/javascript">
+(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-           if (footerTop < docHeight) {
-             $('#footer').css('margin-top', (docHeight - footerTop) + 0 +  'px');
-           }
-         }
+ga('create', '{{site.google_analytics_tracking_id}}', 'auto');
+ga('send', 'pageview');
+</script>
+{% endif %}
 
-          $(window).resize(function() {
-           new FooterBottom();
-         });
-         new FooterBottom();
-       });
+<script type="text/javascript" src="{{ site.url }}/themes/tekkie/tekkie/assets/js/footer_bottom.js"></script>
+<script type="text/javascript" src="{{ site.url }}/themes/tekkie/tekkie/assets/js/cookie_consent.js"></script>
 
-       // Back to top link
-       if ($('#back-to-top').length) {
-          var scrollTrigger = 100, // px
-              backToTop = function () {
-                  var scrollTop = $(window).scrollTop();
-                  if (scrollTop > scrollTrigger) {
-                      $('#back-to-top').addClass('show');
-                  } else {
-                      $('#back-to-top').removeClass('show');
-                  }
-              };
-          backToTop();
-          $(window).on('scroll', function () {
-              backToTop();
-          });
-              $('#back-to-top').on('click', function (e) {
-                  e.preventDefault();
-                  $('html,body').animate({
-                      scrollTop: 0
-                  }, 700);
-              });
-          }
+<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/1.0.10/cookieconsent.min.js"></script>
+<script src="{{ site.url }}/components/highlightjs/highlight.pack.js"></script>
+<script>hljs.initHighlightingOnLoad();</script>
 
-      // Cookie consent
-      window.cookieconsent_options = {"message":"This website uses cookies to ensure you get the best experience on our website","dismiss":"Got it!","learnMore":"More info","link":"www.tekkie.ro/cookies","theme":"dark-floating"};
-        </script>
-        <script>
-        var map;
-        function initMap() {
-          map = new google.maps.Map(document.getElementById('map'), {
-            center: {lat:46.064335, lng:23.567661 },
-            zoom: 17,
-            scrollwheel:  false
-          });
-          var marker = new google.maps.Marker({
-            position: {lat:46.064335, lng:23.567661 },
-            map: map,
-            title: 'Tekkie Consulting SRL'
-          });
-        }
-        </script>
-        <script
-          src="http://maps.googleapis.com/maps/api/js?key=AIzaSyCnYexG1baJuF81957Mxn7LgimbeYXL9cE&callback=initMap">
-        </script>
-
-        <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/1.0.10/cookieconsent.min.js"></script>
-        <script src="{{ site.url }}/components/highlightjs/highlight.pack.js"></script>
-        <script>hljs.initHighlightingOnLoad();</script>
-
-        {% block scripts_after %}
-        {% endblock %}
+{% block scripts_after %}
+{% endblock %}
 </body>
 </html>
