--- a/source/themes/tekkie/tekkie/_layouts/simple.html
+++ b/source/themes/tekkie/tekkie/_layouts/simple.html
@@ -4,33 +4,21 @@
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
 <head>
-  <link rel="shortcut icon" href="{{ site.url }}/assets/images/favicon.ico">
+  <link rel="shortcut icon" href="{{ site.url }}/themes/tekkie/tekkie/assets/images/favicon.ico">
   <title>{% block title %}{{ page.title }}{% endblock %} &mdash; {{ site.title }} &mdash; {{ site.subtitle }}</title>
   <meta charset="utf-8">
   <meta name="theme-color" content="#ffffff">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        {% block head_meta %}
-  <meta name="robots" content="noindex, follow">
-        {% endblock %}
+{% block head_meta %}
+  <meta name="robots" content="follow">
+{% endblock %}
 
-        {% block meta %}{% endblock %}
+{% block meta %}{% endblock %}
 
-  <link href="{{ site.url }}/components/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
-  <link href="{{ site.url }}/components/bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet" type="text/css" />
-  <link href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet" type="text/css" />
-  {% for stylesheet in theme_paths("assets/css/style.css") %}
-  <link href="{{ site.url }}/{{ stylesheet }}" rel="stylesheet" media="screen" />
-  {% endfor %}
-  <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
-  <!--[if lt IE 9]>
-      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-  <![endif]-->
-
-  <link rel="stylesheet" href="{{ site.url }}/components/highlightjs/styles/github.css" />
+{% include "head_styles" %}
   <link rel="alternate" type="application/atom+xml" href="{{ site.url }}/atom.xml" title="{{ site.title }} activity feed" />
 
-  <link href='https://fonts.googleapis.com/css?family=Amaranth:400,700' rel='stylesheet' type='text/css' />
   <style>
   /** quick fix because bootstrap <pre> has a background-color. */
   pre code { background-color: inherit; }
@@ -43,9 +31,9 @@
 </head>
 <body>
 {% include "navigation" %}
-        <div class="mainContent">
+<div class="mainContent container">
 
-                    {% block content_wrapper %}{% block content %}{% endblock %}{% endblock %}
+{% block content_wrapper %}{% block content %}{% endblock %}{% endblock %}
 
-        </div>
+</div>
 {% include "footer" %}
