--- a/source/themes/tekkie/tekkie/assets/css/style.scss
+++ b/source/themes/tekkie/tekkie/assets/css/style.scss
@@ -1,17 +1,24 @@
+$link-color: #CC3514;
+$links-color-sidebar: #3D5899;
+
+$screen-xs: 480px;
+$screen-sm: 768px;
+$screen-md: 992px;
+$screen-lg: 1200px;
+$screen-xs-max: ($screen-sm - 1);
+$screen-sm-max: ($screen-md - 1);
+$screen-md-max: ($screen-lg - 1);
+
 body {
   font-family: Arial,lucida-sans,Helvetica,Tahoma;
-  background: url('../images/background.jpg');
+  background : url('../images/background.jpg');
 }
 
 
 h4 small {
-    display: block;
+    display  : block;
     font-size: 60%;
-    color: #888;
-}
-
-.mainContent, footer.container {
-
+    color    : #888;
 }
 
 footer {
@@ -21,28 +28,26 @@ footer {
 }
 
 .sidebar{
-  margin-top:60px;
+  margin-top: 60px;
 }
 .sidebar-list{
   list-style-type: none; 
-  margin:0; 
-  padding:0; 
-  /*color:*/
+  margin         : 0; 
+  padding        : 0;
 
   a {
-    color: #3D5899;
+    color: $links-color-sidebar;
   }
 }
 
-@media (max-width: 767px) {
+@media (max-width: $screen-sm-max) {
     .sidebar {
         padding-top: 30px;
     }
 }
-@media (min-width: 980px) {
+@media (min-width: $screen-md) {
     body {
         padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
-
     }
 }
 
@@ -57,7 +62,7 @@ footer {
 
 .navbar-inverse.navbar-tkc .navbar-inner {
   background: #30384B;
-  margin: 0;
+  margin    : 0;
 }
 
 .navbar-inverse.navbar-tkc .navbar-nav>li>a {
@@ -66,35 +71,37 @@ footer {
 
 .navbar-inverse.navbar-tkc .navbar-nav>.active>a {
   background-color: inherit;
-  border-top: 5px solid #30384B;
-  color: #fff;
+  border-top      : 5px solid #30384B;
+  color           : #fff;
 }
 
 .navbar-inverse .navbar-nav>li>a:focus, .navbar-inverse .navbar-nav>li>a:hover {
-  color: #fff;
+  color     : #fff;
   border-top: 5px solid #ccc;
 }
 
 .navbar .brand {
-  margin: 1px;
+  margin : 1px;
   padding: 0px;
 }
-.navbar-brand{transition:all .5s ease-in-out;}
+.navbar-brand{
+  transition: all .5s ease-in-out;
+}
 
 .navbar-brand>img {
-  height: 32px;
-  display: inline;
-  transition:all .5s ease-in-out;
+  height    : 32px;
+  display   : inline;
+  transition: all .5s ease-in-out;
 }
 .navbar-brand, .navbar-brand>img:hover{
-  transform:rotatez(360deg);
+  transform: rotatez(360deg);
 }
 
-@media (max-width: 979px) {
+@media (max-width: $screen-sm-max) {
   .navbar .btn-navbar {
-    display: inline-block;
+    display         : inline-block;
     background-color: #00D2FF;
-    min-height: 5em;
+    min-height      : 5em;
   }
 }
 
@@ -103,51 +110,47 @@ footer {
 }
 
 /* screen size needs more love */
-@media (min-width: 979px) {
-
-
-
+@media (min-width: $screen-md) {
   .navbar .nav {
-    float: right;
+    float : right;
     margin: 0 1em .5em 1em;
   }
 }
 
 article h2, h3 {
-/*  font-family: 'Amaranth';*/
   font-family: "futura-pt",sans-serif;
   font-weight: 700;
-  font-size: 28px;
+  font-size  : 28px;
 }
 
 article h2, h3, code,
 h2 a, h3 a, h2 a:hover, h3 a:hover, h2 a:focus, h3 a:focus {
-  color: #3D5899;
+  color: $links-color-sidebar;
 }
 
 a, a:hover, a:focus {
-  color: #CC3514;
+  color: $link-color;
 }
 
 .separator-bottom {
   background: url('../images/separator-for-bottom.png') repeat-x;
-  width: 100%;
-  height: 17px;
+  width     : 100%;
+  height    : 17px;
 }
 
 .panel {
-  float: left;
+  float : left;
   margin: 1em;
 }
 
 h3.panel-title {
-  color: #3D5899;
+  color: $links-color-sidebar;
 }
 
 .blog-posts h2 {
   border-bottom: 1px solid #30384B;
-  color: #30384B;
-  opacity: 0.8;
+  color        : #30384B;
+  opacity      : 0.8;
 }
 
 .blog-posts h3 {
@@ -156,8 +159,8 @@ h3.panel-title {
 
 .blog-posts .nav>li>a, .blog-posts .nav>li>a:visited {
   background-color: #eee;
-  opacity: 0.8;
-  padding: 2px;
+  opacity         : 0.8;
+  padding         : 2px;
 }
 
 .blog-posts .nav>li>a:hover, .blog-posts .nav>li>a:focus {
@@ -169,7 +172,7 @@ h3.panel-title {
 }
 
 .tk-services ul.pager {
-  clear: both;
+  clear        : both;
   margin-bottom: 0;
 }
 
@@ -186,52 +189,24 @@ h3.panel-title {
 
 .tel dd, .email dd {
   margin-left: 5px;
-  display: inline-block;
+  display    : inline-block;
 }
 
 .tel>span.glyphicon {
   margin-right: 1em;
 }
 
-footer ul.social {
-  list-style: none;
+footer {
+  a:hover {
+    color          : inherit;
+    text-decoration: none;
+
+    i {
+      color: $link-color;
+    }
+  }
 }
 
-footer ul.social li {
-  display: inline-block;
-  padding: 0 1em;
-}
-
-footer ul.social li a {
-  display: block;
-  width: 48px;
-  height: 48px;
-  text-indent: -99999px;
-}
-
-footer ul.social li.facebook a {
-  background: url('../images/social/black-facebook.png') bottom no-repeat;
-}
-
-footer ul.social li.facebook a:hover {
-  background: url('../images/social/colour-facebook.png') bottom no-repeat;
-}
-
-footer ul.social li.github a {
-  background: url('../images/social/black-github.png') bottom no-repeat;
-}
-
-footer ul.social li.github a:hover {
-  background: url('../images/social/colour-github.png') bottom no-repeat;
-}
-
-footer ul.social li.twitter a {
-  background: url('../images/social/black-twitter.png') bottom no-repeat;
-}
-
-footer ul.social li.twitter a:hover {
-  background: url('../images/social/colour-twitter.png') bottom no-repeat;
-}
 /* Global styles */
 .margin-bottom{margin-bottom:30px;}
 .margin-top{margin-bottom:30px;}
@@ -316,7 +291,7 @@ footer ul.social li.twitter a:hover {
 .clear:nth-of-type(3n-1){clear:left;}
 .article-title>a:hover{text-decoration: none;}
 
-.post-title:after{content: ""; width:50px; height:2px; display:block; background-color:#3D5899; transition: all .2s ease-in-out; margin-bottom:10px;}
+.post-title:after{content: ""; width:50px; height:2px; display:block; background-color:$links-color-sidebar; transition: all .2s ease-in-out; margin-bottom:10px;}
 .post-title:hover:after{content: ""; width:100%;}
 .fp-content, .fp-excerpt{margin-top:15px;}
 
@@ -386,4 +361,44 @@ a i.ion-ios-folder-outline {
 h1.page-header i.ion-ios-folder-outline,
 h1.page-header i.ion-ios-pricetags-outline {
     margin-right: .5em;
+}
+
+.mainContent {
+  //margin-top: 70px;
+}
+
+/** about us page */
+.media.geeks {
+  margin-bottom: 2em;
+
+  h3 {
+    color: inherit;
+    font-weight: 200;
+    font-size: large;
+  }
+  .media-object {
+    max-width: 150px;
+  }
+  .media-body {
+    a {
+      color: $links-color-sidebar;
+    }
+    div {
+      display: inline-block;
+      padding-right: 1em;
+
+      i {
+        padding-right: .5em;
+      }
+    }
+  }
+}
+
+.geek-icon {
+  font-size: 25px;
+  margin-right: 20px;
+  transition: all .2s ease-in-out;
+}
+.big-call-to-action {
+  margin: 1em 10% 3em 10%;
 }
