--- a/source/themes/tekkie/tekkie/_includes/navigation.html
+++ b/source/themes/tekkie/tekkie/_includes/navigation.html
@@ -1,3 +1,16 @@
+
+{% if site.analytics.google %}
+<script type="text/javascript">
+(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+ga('create', '{{ site.analytics.google }}', 'auto');
+ga('send', 'pageview');
+</script>
+{% endif %}
+
 <header>
     <div class="navbar navbar-inverse navbar-fixed-top navbar-tkc">
         <div class="navbar-inner">
@@ -25,5 +38,3 @@
         </div>
     </div>
 </header>
-
-
