--- a/source/themes/tekkie/tekkie/_layouts/default_v4.html
+++ b/source/themes/tekkie/tekkie/_layouts/default_v4.html
@@ -35,7 +35,7 @@
 </head>
 <body>
 {% include "navigation" %}
-        <div class="mainContent container">
+        <div class="mainContent container-fluid">
             <div class="row">
                 <div class="col-md-8">
                     {% block content_wrapper %}{% block content %}{% endblock %}{% endblock %}
