--- a/source/themes/tekkie/tekkie/assets/css/style.scss
+++ b/source/themes/tekkie/tekkie/assets/css/style.scss
@@ -351,11 +351,15 @@ article header {
     margin-top: 1em;
 }
 
-/** blogpost meta information */
-a i.ion-ios-pricetags-outline,
-a i.ion-ios-folder-outline {
-    margin-right: .5em;
+// /** blogpost meta information */
+// a i.ion-ios-pricetags-outline,
+// a i.ion-ios-folder-outline {
+//     margin-right: .5em;
+// }
+i.icon {
+  margin-right: .2em;
 }
+
 
 /** category and tag page header */
 h1.page-header i.ion-ios-folder-outline,
