--- a/source/themes/tekkie/tekkie/assets/css/style.css
+++ b/source/themes/tekkie/tekkie/assets/css/style.css
@@ -1,6 +1,7 @@
 body {
   font-family: Arial,lucida-sans,Helvetica,Tahoma;
-  background: url("../images/background.jpg"); }
+  background: url("../images/background.jpg");
+  padding-top: 4.5rem; }
 
 h4 small {
   display: block;
@@ -23,18 +24,14 @@ footer .container {
 @media (max-width: 991px) {
   .sidebar {
     padding-top: 30px; } }
-@media (min-width: 992px) {
-  body {
-    padding-top: 60px;
-    /* 60px to make the container go all the way to the bottom of the topbar */ } }
-/** imbrincated containers should not have fixed width */
 .container .container {
   width: auto; }
 
+/*------------------------- main navigation menu -------------------------*/
 .navbar-inverse {
   margin: 0px; }
 
-.navbar-inverse.navbar-tkc .navbar-inner {
+.navbar-inverse.navbar-tkc {
   background: #30384B;
   margin: 0; }
 
@@ -62,9 +59,6 @@ footer .container {
   display: inline;
   transition: all .5s ease-in-out; }
 
-.navbar-brand, .navbar-brand > img:hover {
-  transform: rotatez(360deg); }
-
 @media (max-width: 991px) {
   .navbar .btn-navbar {
     display: inline-block;
@@ -73,11 +67,11 @@ footer .container {
 .navbar .navbar-brand {
   height: inherit; }
 
-/* screen size needs more love */
 @media (min-width: 992px) {
   .navbar .nav {
     float: right;
     margin: 0 1em .5em 1em; } }
+/*-----------------------------------------*/
 article h2, h3 {
   font-family: "futura-pt",sans-serif;
   font-weight: 700;
