move `about` page in a onecolumn layout

--- a/source/themes/tekkie/tekkie/_layouts/onecolumn.html
+++ b/source/themes/tekkie/tekkie/_layouts/onecolumn.html
@@ -20,7 +20,7 @@
 {% block head_scripts %}{% endblock %}
 
 </head>
-<body>
+<body{% if page.html_id %} id="{{ page.html_id }}"{% endif %}>
 
 {% include "navigation" %}
 
