cleanup `contact` and `homepage`

--- a/source/themes/tekkie/tekkie/assets/css/style.css
+++ b/source/themes/tekkie/tekkie/assets/css/style.css
@@ -222,13 +222,9 @@ footer a:hover {
   content: "."; }
 
 .intro-cta-button {
-  background-color: #30384B;
   border: none;
   margin-top: 30px;
   transition: all .1s ease-in-out; }
-
-.intro-cta-button:hover {
-  background-color: #1c202b; }
 
 /* Homepage services section */
 .services-section {
@@ -437,12 +433,13 @@ h1.page-header i.ion-ios-pricetags-outline {
     font-size: large; }
   .media.geeks .media-object {
     max-width: 150px; }
-  .media.geeks .media-body a {
-    color: #3D5899; }
-  .media.geeks .media-body div {
-    display: inline-block;
+  .media.geeks .media-body {
     padding-right: 1em; }
-    .media.geeks .media-body div i {
+    .media.geeks .media-body a {
+      color: #3D5899; }
+    .media.geeks .media-body div {
+      display: inline-block; }
+    .media.geeks .media-body i {
       padding-right: .5em; }
 
 .geek-icon {
@@ -469,5 +466,14 @@ h1.page-header i.ion-ios-pricetags-outline {
 
 #page-about .container .container {
   width: 100%; }
+
+#page-home .card-title a, #page-home .card-title a:hover {
+  text-decoration: none; }
+#page-home .card {
+  background-color: #f2f2f2;
+  border: none; }
+#page-home .card-footer, #page-home .card-footer a {
+  background: inherit;
+  border: none; }
 
 /*# sourceMappingURL=style.css.map */
