--- a/source/themes/tekkie/tekkie/_layouts/default-with-map.html
+++ b/source/themes/tekkie/tekkie/_layouts/default-with-map.html
@@ -1,69 +1,4 @@
-<!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
-<head>
-  <link rel="shortcut icon" href="{{ site.url }}/themes/tekkie/tekkie/assets/images/favicon.ico">
-  <title>{% block title %}{{ page.title }}{% endblock %} &mdash; {{ site.title }} &mdash; {{ site.subtitle }}</title>
-  <meta charset="utf-8">
-  <meta name="theme-color" content="#ffffff">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-        {% block head_meta %}
-  <meta name="robots" content="noindex, follow">
-        {% endblock %}
-
-        {% block meta %}{% endblock %}
-
-  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
-  <link href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="style" type="text/css">
-  {% for stylesheet in theme_paths("assets/css/style.css") %}
-  <link href="{{ site.url }}/{{ stylesheet }}" rel="stylesheet" media="screen" />
-  {% endfor %}
-  <link relation=""
-  <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
-  <!--[if lt IE 9]>
-      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-  <![endif]-->
-
-  <link rel="stylesheet" href="{{ site.url }}/components/highlightjs/styles/github.css" />
-  <link rel="alternate" type="application/atom+xml" href="{{ site.url }}/atom.xml" title="{{ site.title }} activity feed" />
-  <link href='https://fonts.googleapis.com/css?family=Amaranth:400,700' rel='stylesheet' type='text/css' />
-  <link href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet" type="text/css" />
-  <style>
-  /** quick fix because bootstrap <pre> has a background-color. */
-  pre code { background-color: inherit; }
-  </style>
-        {% block head_styles %}
-        {% endblock %}
-        {% block head_scripts %}
-        {% endblock %}
-
-</head>
-<body>
-{% include "navigation" %}
-        <div class="mainContent container">
-            <div class="row">
-                <div class="col-md-8">
-                    {% block content_wrapper %}{% block content %}{% endblock %}{% endblock %}
-                </div>
-                <div class="col-md-4 sidebar">
-                    {% block contentSidebar %}
-                    {% if data.posts_categories %}
-                    <div class="well-xs sidebar-nav">
-                      <h4 class="sidebar-title">Categories</h4>
-                      <ul class="sidebar-list">
-                      {% for category,posts in data.posts_categories %}
-                      <li class="sidebar-li"><a href="{{ site.url }}/blog/categories/{{ category|url_encode(true) }}">{{ category }}</a></li>
-                      {% endfor %}
-                      </ul>
-                    </div>
-                    {% endif %}
-                    {% endblock %}
-                </div>
-            </div>
-        </div>
+{% extends "onecolumn" %}
 
 {% block scripts_after %}
 <!-- G MAPS -->
@@ -83,8 +18,6 @@ function initMap() {
 }
 </script>
 <script
-  src="http://maps.googleapis.com/maps/api/js?key=AIzaSyCnYexG1baJuF81957Mxn7LgimbeYXL9cE&callback=initMap">
+  src="http://maps.googleapis.com/maps/api/js?key={{ site.maps_key }}&callback=initMap">
 </script>
 {% endblock %}
-
-{% include "footer" %}
