--- a/source/themes/tekkie/tekkie/_layouts/onecolumn.html
+++ b/source/themes/tekkie/tekkie/_layouts/onecolumn.html
@@ -26,16 +26,14 @@
 
 <div class="mainContent container">
 
-<div class="row">
-
 {% block content_wrapper %}{% block content %}{% endblock %}{% block items_pagination %}{% endblock %}{% endblock %}
-
-</div>
 
 </div><!-- .mainContent -->
 
 {% include "footer" %}
 {% include "footer_scripts" %}
+
+{% block scripts_after %}{% endblock %}
 
 </body>
 </html>
