--- a/source/themes/tekkie/tekkie/assets/css/style.scss
+++ b/source/themes/tekkie/tekkie/assets/css/style.scss
@@ -91,9 +91,6 @@ footer {
   display   : inline;
   transition: all .5s ease-in-out;
 }
-//.navbar-brand, .navbar-brand>img:hover{
-//  transform: rotatez(360deg);
-//}
 
 @media (max-width: $screen-sm-max) {
   .navbar .btn-navbar {
@@ -240,7 +237,15 @@ footer {
 }
 
 /* Homepage intro section */
-.intro-img {background: linear-gradient(rgba(0,0,0,0.9),rgba(0,0,0,0.7)), url('../images/intro-img.jpg') no-repeat center; background-attachment: fixed; text-align: center; padding:75px 0; color:white; position:relative; z-index:1;}
+.intro-img {
+  background: linear-gradient(rgba(0,0,0,0.9),rgba(0,0,0,0.7)), url('../images/intro-img.jpg') no-repeat center; 
+  background-attachment: fixed; 
+  text-align: center; 
+  padding:75px 0; 
+  color:white; 
+  position:relative; 
+  z-index:1;
+}
 .intro-title{position:relative;}
 .intro-title:after{content:""; display: block;width:100px; height:2px; background-color:#30384B; margin:0 auto 0 auto; }
 .company-summary{
@@ -251,8 +256,11 @@ footer {
 .service-title{display:inline-block; font-size:20px; margin:0; color:white; z-index:2; }
 .service-title:after{content:".";}
 
-.intro-cta-button{background-color:#30384B; border:none; margin-top:30px; transition: all .1s ease-in-out; }
-.intro-cta-button:hover{background-color: #1c202b; }
+.intro-cta-button{ 
+  border:none; 
+  margin-top:30px; 
+  transition: all .1s ease-in-out; 
+}
 
 /* Homepage services section */
 .services-section{padding:50px 0;}
@@ -351,15 +359,9 @@ article header {
     margin-top: 1em;
 }
 
-// /** blogpost meta information */
-// a i.ion-ios-pricetags-outline,
-// a i.ion-ios-folder-outline {
-//     margin-right: .5em;
-// }
 i.icon {
   margin-right: .2em;
 }
-
 
 /** category and tag page header */
 h1.page-header i.ion-ios-folder-outline,
@@ -385,16 +387,15 @@ h1.page-header i.ion-ios-pricetags-outline {
   }
   .media-body {
     
-    a {
-      color: $links-color-sidebar;
-    }
-    div {
-      display: inline-block;
-      padding-right: 1em;
+  a {
+    color: $links-color-sidebar;
+  }
+  div {
+    display: inline-block;}
+    padding-right: 1em;
 
-      i {
-        padding-right: .5em;
-      }
+    i {
+      padding-right: .5em;
     }
   }
 }
@@ -428,3 +429,21 @@ h1.page-header i.ion-ios-pricetags-outline {
 }
 
 #page-about .container .container { width: 100%; }
+
+#page-home {
+  .card-title {
+    a, a:hover {
+      text-decoration: none;
+    }
+  }
+  
+  .card {
+    background-color: #f2f2f2;
+    border: none;
+  }
+  
+  .card-footer, .card-footer a {
+    background: inherit;
+    border: none;
+  }
+}
