--- a/source/themes/tekkie/tekkie/assets/css/style.scss
+++ b/source/themes/tekkie/tekkie/assets/css/style.scss
@@ -447,3 +447,16 @@ h1.page-header i.ion-ios-pricetags-outline {
     border: none;
   }
 }
+
+article.card {
+  background: inherit;
+  border: none;
+}
+
+#page-geek {
+  .card-img-top {
+    height: 250px;
+    width: 250px;
+    margin: 0 auto;
+  }
+}
