--- a/source/themes/tekkie/tekkie/_includes/head_styles.html
+++ b/source/themes/tekkie/tekkie/_includes/head_styles.html
@@ -3,6 +3,8 @@
 
 <link href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet" type="text/css" />
 
+<link rel="stylesheet" href="{{ site.url }}/components/highlightjs/styles/github.css" />
+
 {% for stylesheet in theme_paths("assets/css/style.css") %}
 <link href="{{ site.url }}/{{ stylesheet }}" rel="stylesheet" media="screen" />
 {% endfor %}
