about page redesigned

--- a/source/themes/tekkie/tekkie-semantic/_includes/navigation.html.twig
+++ b/source/themes/tekkie/tekkie-semantic/_includes/navigation.html.twig
@@ -1,6 +1,6 @@
 
 <header>
-  <div class="ui fixed inverted massive pointing menu">
+  <div class="ui top fixed inverted massive pointing menu">
     <div class="ui container">
       <a href="{{ site.url }}" class="header item">
         <img class="logo" src="{{ site.url }}/{{ theme_path("assets/images/logomark-tekkie-white.svg") }}" />
