--- a/source/themes/tekkie/tekkie-semantic/_layouts/basic.html.twig
+++ b/source/themes/tekkie/tekkie-semantic/_layouts/basic.html.twig
@@ -12,7 +12,8 @@
 {%- endif -%}
 </title>
 
-    <link rel="stylesheet" href="{{ site.url }}/themes/tekkie/tekkie-semantic/assets/css/semantic.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.13/semantic.min.css" />
+    <link rel="stylesheet" href="{{ site.url }}/themes/tekkie/tekkie-semantic/assets/css/semantic-overrides.css" />
 
 </head>
 
@@ -29,5 +30,7 @@
 
 {% include "footer" %}
 
+<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/jquery@3.2.1/dist/jquery.min.js"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.13/semantic.min.js"></script>
 </body>
 </html>
