--- a/source/themes/tekkie/tekkie-semantic/_layouts/onecolumn.html.twig
+++ b/source/themes/tekkie/tekkie-semantic/_layouts/onecolumn.html.twig
@@ -1,26 +1,5 @@
-<!DOCTYPE html>
+{% extends "basic" %}
 
-<html>
-<head>
-  {#{% include 'head_meta' only %}#}
-
-  <title>{% block title %}{{ page.title }}{% endblock %}
-{%- if page.layout == 'post' or page.menu_active == 'blog' -%}
- &mdash; Tekkie Consulting Blog
-{%- else -%}
- &mdash; {{ site.title }} &mdash; {{ site.subtitle }}
-{%- endif -%}
-</title>
-
-    <link rel="stylesheet" href="{{ site.url }}/themes/tekkie/tekkie-semantic/assets/css/semantic.min.css" />
-
-</head>
-
-<body{% if page.html_id %} id="{{ page.html_id }}"{% endif %}>
-
-{% include "navigation" %}
-
-<div class="ui main container">
 {%- block content_wrapper -%}
 
     <div class="ui divided grid">
@@ -35,10 +14,3 @@
         </div>
     </div>
 {%- endblock -%}
-
-</div><!-- .mainContent -->
-
-{% include "footer" %}
-
-</body>
-</html>
