--- a/source/themes/tekkie/tekkie-semantic/_includes/navigation.html.twig
+++ b/source/themes/tekkie/tekkie-semantic/_includes/navigation.html.twig
@@ -1,9 +1,9 @@
 
 <header>
-  <div class="ui top fixed inverted massive pointing menu">
+  <div class="{{ style }}">
     <div class="ui container">
       <a href="{{ site.url }}" class="header item">
-        <img class="logo" src="{{ site.url }}/{{ theme_path("assets/images/logomark-tekkie-white.svg") }}" />
+        <img class="logo" src="{{ site.url }}/{{ theme_path("assets/images/" ~ logo) }}" />
         Tekkie Consulting
       </a>
 
